--- a/bugzilla/template/ko/default/account/create.html.tmpl
+++ b/bugzilla/template/ko/default/account/create.html.tmpl
@@ -28,7 +28,7 @@
 [% PROCESS global/variables.none.tmpl %]
 
 [% title = BLOCK %]
-  Create a new [% terms.Bugzilla %] account
+  새 [% terms.Bugzilla %] 계정 만들기
 [% END %]
 
 [% PROCESS global/header.html.tmpl
@@ -36,27 +36,25 @@
            onload = "document.forms['account_creation_form'].login.focus();" %]
 
 <p>
-  To create a [% terms.Bugzilla %] account, all you need to do is to enter
+  [% terms.Bugzilla %] 계정을 만들려면,
 [% IF Param('emailsuffix') == '' %]
-  a legitimate email address.
+  정확한 이메일 주소를 입력하십시오.
 [% ELSE %]
-  an accountname which when combined with [% Param('emailsuffix') %]
-  corresponds to an address where you receive email.
+  [% Param('emailsuffix') %]를 뒤에 붙이면 당신이 이메일을 받을 수 있는 주소가 되는
+  계정 아이디를 입력하십시오.
 [% END %]
-  You will receive an email at this address to confirm the creation of your
-  account. <b>You will not be able to log in until you receive the email.</b>
-  If it doesn't arrive within a reasonable amount of time, you may contact
-  the maintainer of this [% terms.Bugzilla %] installation
-  at <a href="mailto:[% Param("maintainer") %]">[% Param("maintainer") %]</a>.
+  당신에게 계정 생성을 확인하기 위해 입력한 주소로 이메일이 발송될 것입니다.
+  <b>당신은 이메일을 받을 때 까지 로그인 할 수 없습니다.</b> 만약 이메일이 오랜 시간동안 도착하지
+  않는다면, <a href="mailto:[% Param("maintainer") %]">[% Param("maintainer") %]</a>
+  에서 [% terms.Bugzilla %] 설치의 메인테이너에게 문의하십시오.
 </p>
 
 [% IF Param('createemailregexp') == '.*' && Param('emailsuffix') == '' %]
 <p>
-  <b>PRIVACY NOTICE:</b> [% terms.Bugzilla %] is an open [% terms.bug %]
-  tracking system. Activity on most [% terms.bugs %], including email
-  addresses, will be visible to the public. We <b>recommend</b> using a
-  secondary account or free web email service (such as Gmail, Yahoo,
-  Hotmail, or similar) to avoid receiving spam at your primary email address.
+  <b>프라이버시 공지:</b> [% terms.Bugzilla %] 은 오픈 [% terms.bug %]
+  트래킹 시스템입니다. 이메일 주소를 포함하여 [% terms.bugs %] 에서 하는 활동들은 공개적으로
+  노출됩니다. 따라서 저희는 부가적인 계정이나 무료 이메일 서비스 (Gmail, Yahoo, Hotmail 등)를
+  사용하여 당신의 주요한 이메일 주소에 스팸이 날라오는 것을 막을 수 있도록 하기를 <b>권장합니다</b>.
 </p>
 [% END %]
 
@@ -64,7 +62,7 @@
   <table>
     <tr>
       <td align="right">
-        <b>Email address:</b>
+        <b>이메일 주소:</b>
       </td>
       <td>
         <input size="35" id="login" name="login">
