--- a/bugzilla/template/ko/default/account/email/change-new.txt.tmpl
+++ b/bugzilla/template/ko/default/account/email/change-new.txt.tmpl
@@ -23,20 +23,20 @@
 [% expiration_ts = token_ts + (max_token_age * 86400) %]
 From: [% Param('mailfrom') %]
 To: [% emailaddress %]
-Subject: [% terms.Bugzilla %] Change Email Address Request
+Subject: [% terms.Bugzilla %] 이메일 주소 변경 요청
 X-Bugzilla-Type: admin
 
-[%+ terms.Bugzilla %] has received a request to change the email address
-for the account [% oldemailaddress %] to your address.
+[%+ terms.Bugzilla %]에서 당신의 주소로 부터
+[% oldemailaddress %]계정의 이메일 주소 변경 요청을 받았습니다.
 
-To confirm the change, visit the following link:
+변경을 수락하려면, 다음 링크를 방문하십시오:
 
 [%+ urlbase %]token.cgi?t=[% token FILTER url_quote %]&a=cfmem
 
-If you are not the person who made this request, or you wish to cancel
-this request, visit the following link:
+만약 당신이 이 요청을 하지 않았거나, 이 요청을 취소하고 싶다면,
+다음 링크를 방문하십시오:
 
 [%+ urlbase %]token.cgi?t=[% token FILTER url_quote %]&a=cxlem
 
-If you do nothing, the request will lapse after [%+ max_token_age %] days
-(on [%+ time2str("%B %o, %Y at %H:%M %Z", expiration_ts) %]).
+당신이 아무것도 하지 않으면, 이 요청은 [%+ max_token_age %]일 후에 자동으로 파기될 것입니다.
+(자동 파기일: [%+ time2str("%B %o, %Y at %H:%M %Z", expiration_ts) %]).
