--- a/trunk/bugzilla/template/ko/default/account/email/change-old.txt.tmpl
+++ b/trunk/bugzilla/template/ko/default/account/email/change-old.txt.tmpl
@@ -34,14 +34,15 @@ X-MSMail-Priority: High
 X-Priority: 1
 X-Bugzilla-Type: admin
 
-[%+ terms.Bugzilla %] has received a request to change the email address
-for your account to [%+ newemailaddress %].
+[%+ terms.Bugzilla %]에서 당신의 계정의 이메일 주소를 [%+ newemailaddress %]로
+변경하는 요청을 받았습니다.
 
-If you are not the person who made this request, or you wish to cancel
-this request, visit the following link:
+만약 당신이 이 요청을 하지 않았거나, 이 요청을 취소하고 싶다면,
+다음 링크를 방문하십시오:
 
 [%+ urlbase %]token.cgi?t=[% token FILTER url_quote %]&a=cxlem
 
-If you do nothing, and [%+ newemailaddress %] confirms this request,
-the change will be made permanent after [%+ max_token_age %] days
-(on [%+ time2str("%B %o, %Y at %H:%M %Z", expiration_ts) %]).
+당신이 아무것도 하지 않고, [%+ newemailaddress %] 에서 이 요청을 수락하면,
+이 변경 요청은 [%+ max_token_age %]일
+([%+ time2str("%B %o, %Y at %H:%M %Z", expiration_ts) %])
+후에 영구적으로 적용될 것입니다.
