--- a/trunk/bugzilla/template/ko/default/account/email/confirm.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/account/email/confirm.html.tmpl
@@ -26,7 +26,7 @@
 [% PROCESS global/header.html.tmpl %]
 
 <p>
-  To change your email address, please enter the old email address:
+  당신의 이메일 주소를 변경하려면, 이전 이메일 주소를 입력해 주십시오:
 </p>
 
 <form method="post" action="token.cgi">
