--- a/trunk/bugzilla/template/ko/default/list/edit-multiple.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/list/edit-multiple.html.tmpl
@@ -308,7 +308,7 @@
   </table>
 
   [% IF foundinactive %]
-    <p style="font-size:smaller">(주의: [% FILTER inactive %] 비활성 그룹에 [% terms.Bugs %] 을/를 [% FILTER inactive %] 비활성 그룹에 더하지 않을 수도 있음[% END %], 지우기만 함.)</p>
+    <p style="font-size:smaller">(주의: [% terms.Bugs %] 을/를 [% FILTER inactive %] 비활성 그룹에 더하지 않을 수도 있음[% END %], 지우기만 함.)</p>
   [% END %]
 
 [% END %]
