--- a/trunk/bugzilla/template/ko/default/welcome-admin.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/welcome-admin.html.tmpl
@@ -44,7 +44,7 @@
     의 잘못되었을 때 책임이 갖는 사람입니다.</li>
 
     <li><a href="editparams.cgi?section=core#urlbase">urlbase</a>는 설치 페이지로
-    연결되는 URL입니다. 또한 이메일에 사용될 수도 있습니다. (이것은 또한 당신이 이 페이지를
+    연결되는 URL입니다. 또한 전자우편에 사용될 수도 있습니다. (이것은 또한 당신이 이 페이지를
     보게되는 이유이기도 합니다: 이 매개변수가 설정되지 않으면, 계속 이 페이지를 보게 될
     것입니다)</li>
 
@@ -69,12 +69,13 @@
     이 변수는 기본값과 다르게 설정하십시오.</li>
 
     <li><a href="editparams.cgi?section=mta#mail_delivery_method">mail_delivery_method</a>
-    는 sendmail 이나 SMTP와 같이 이메일을 보내는 방식을 정의합니다. 정확히 설정해야 이메일을 보낼 수 있습니다.</li>
+    는 sendmail이나 SMTP처럼 전자우편을 보내는 방식을 정의합니다. 정확히 설정해야 전자우편을 보낼 수 있습니다.</li>
   </ul>
 
   <p>
-    이 모든 설정을 마치면, [% terms.Bugzilla %]의 나머지 매개변수들도 한번 볼 것을 권합니다. 이들이 어떤 역할을 하는지
-    이해하고 당신의 설치에 이들을 수정하고 싶은지 알 수 있습니다.
+    이 모든 설정을 마치면 [% terms.Bugzilla %]의 나머지 매개변수도
+    한번 둘러보세요. 각 항목이 어떤 의미인지, 설치시 고칠 필요가 있는지
+    알 수 있습니다.
   </p>
 </div>
 
