--- a/trunk/bugzilla/template/ko/default/account/profile-activity.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/account/profile-activity.html.tmpl
@@ -73,7 +73,7 @@
 
 <p><a href="editusers.cgi?action=edit&amp;userid=
   [%- otheruser.id FILTER url_quote %]"
-  title="Edit user '[% otheruser.login FILTER html %]'">이 사용자를 수정</a>하거나
+  title="Edit user '[% otheruser.login FILTER html %]'">사용자 고치기</a>나
   <a title="Search For Users" href="editusers.cgi">다른 계정을 찾기.</a>
   [% IF listselectionvalues.matchtype != 'exact' %]
     또는 <a title="Return to the user list"
