--- a/trunk/bugzilla/template/ko/default/account/auth/login.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/account/auth/login.html.tmpl
@@ -30,28 +30,28 @@
 [% PROCESS global/variables.none.tmpl %]
 
 [% PROCESS global/header.html.tmpl
-  title = "Log in to $terms.Bugzilla",
+  title = "$terms.Bugzilla 로그인하기",
   onload = "document.forms['login'].Bugzilla_login.focus()"
 %]
 
 [% USE Bugzilla %]
 
 <p>
-  계속하기 위해 정확한 로그인 아이디와 열쇠글이 필요합니다.
+  계속하려면 정확한 사용자 이름과 열쇠글이 필요합니다.
 </p>
 
 <form name="login" action="[% target FILTER html %]" method="POST"
 [%- IF Bugzilla.cgi.param("data") %] enctype="multipart/form-data"[% END %]>
   <table>
     <tr>
-      <th align="right"><label for="Bugzilla_login">Login:</label></th>
+      <th align="right"><label for="Bugzilla_login">사용자:</label></th>
       <td>
         <input size="35" id="Bugzilla_login" name="Bugzilla_login">
         [% Param('emailsuffix') FILTER html %]
       </td>
     </tr>
     <tr>
-      <th align="right"><label for="Bugzilla_password">Password:</label></th>
+      <th align="right"><label for="Bugzilla_password">열쇠글:</label></th>
       <td>
         <input type="password" size="35" id="Bugzilla_password" name="Bugzilla_password">
       </td>
@@ -64,7 +64,7 @@
         <td>
           <input type="checkbox" id="Bugzilla_remember" name="Bugzilla_remember" value="on"
                  [%+ "checked" IF Param('rememberlogin') == "defaulton" %]>
-          <label for="Bugzilla_remember">Remember my Login</label>
+          <label for="Bugzilla_remember">내 로그인 기억하기</label>
         </td>
       </tr>
     [% END %]
@@ -75,8 +75,8 @@
         <td>
           <input type="checkbox" id="Bugzilla_restrictlogin" name="Bugzilla_restrictlogin"
                  checked="checked">
-          <label for="Bugzilla_restrictlogin">이 세션을 현재 아이피 주소로 제한하기
-          (이 옵션을 사용하면 보안을 향상할 수 있음)</label>
+          <label for="Bugzilla_restrictlogin">이 세션을 현재 IP 주소로 제한하기
+          (이 기능을 선택하면 보안을 향상할 수 있습니다.)</label>
         </td>
       </tr>
     [% END %]
@@ -88,8 +88,8 @@
   <input type="submit" name="GoAheadAndLogIn" value="Log in" id="log_in">
   
   <p>
-    (주의: 쿠키가 이 사이트에 대해 허용되어 있는지 확인하는 것이 좋습니다.
-    그렇지 않으면, 당신은 주기적으로 로그인을 해야 할 수 있습니다.)
+    (주의: 이 사이트에 대해 쿠키를 허용했는지 확인하세요.
+    허용하지 않았다면, 주기적으로 로그인을 해야 할 수 있습니다.)
   </p>
 </form>
 
@@ -101,8 +101,8 @@
     <hr>
 
     <p>
-      만약 [% terms.Bugzilla %] 계정을 가지고 있지 않다면, 지금
-      <a href="createaccount.cgi">새 계정을 만들 수 있습니다</a>.
+      만약 [% terms.Bugzilla %] 사용자가 아니라면, 지금
+      <a href="createaccount.cgi">사용자를 등록할 수 있습니다</a>.
     </p>
   [% END %]
 
@@ -112,8 +112,8 @@
     <a name="forgot"></a>
     <form method="get" action="token.cgi">
       <input type="hidden" name="a" value="reqpw">
-      이미 계정을 가지고 있지만 열쇠글을 잃어버리셨다면,
-      아래에 로그인 이름을 입력하고 열쇠글 변경을 요청하십시오.<br>
+      사용자지만 열쇠글을 잃어버리셨다면,
+      아래에 로그인 이름을 입력하고 열쇠글 변경을 요청하세요.<br>
       <input size="35" name="loginname">
       <input type="submit" id="request" value="Submit Request">
     </form>
